--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -91,7 +91,7 @@
           ctx.lineWidth = 1 / globalScale;
           for (let i = 0; i < maxLayers; i++) {
             ctx.beginPath();
-            ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+            ctx.arc(0, 0, 0, 0, 2 * Math.PI);
             ctx.stroke();
           }
           ctx.restore();
@@ -101,7 +101,7 @@
 
         const isHighlighted = node.radialIndex === activeRadial;
         ctx.beginPath();
-        ctx.arc(0, 0, node.size, 0, 2 * Math.PI);
+        ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
         ctx.fillStyle = node.color;
         ctx.globalAlpha = isHighlighted || activeRadial === null ? 1 : 0.1;
         ctx.fill();
