--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -26,54 +26,37 @@
 
   <script>
     const radialCount = 30;
-    const maxLayers = 5;
-    const ringSpacing = 80;
-    const baseRadius = 100;
+    const radius = 400;
 
-    const nodes = [], links = [];
-    const radialMaxLayer = [];
+    const nodes = [
+      { id: 0, fx: 0, fy: 0 } // center node
+    ];
+    const links = [];
 
-    let nodeId = 0;
-
-    // Adjusting to make lines converge at the center
     for (let i = 0; i < radialCount; i++) {
-      const thisMaxLayer = Math.floor(Math.random() * (maxLayers + 3)); // can go beyond or stop short
-      radialMaxLayer.push(thisMaxLayer);
+      const angle = (2 * Math.PI * i) / radialCount;
+      const x = radius * Math.cos(angle);
+      const y = radius * Math.sin(angle);
+      const nodeId = i + 1;
 
-      for (let l = 0; l < thisMaxLayer; l++) {
-        const angle = (2 * Math.PI * i) / radialCount;
-        const radius = baseRadius + l * ringSpacing;
-        
-        // Adjust Y to ensure the nodes and links converge to the center
-        const x = radius * Math.cos(angle);
-        const y = radius * Math.sin(angle);
+      nodes.push({
+        id: nodeId,
+        fx: x,
+        fy: y,
+        radialIndex: i,
+        size: Math.random() * 6 + 2,
+        color: ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'][Math.floor(Math.random() * 5)]
+      });
 
-        // Add nodes with adjusted positions
-        nodes.push({
-          id: nodeId,
-          fx: x,
-          fy: y,
-          radialIndex: i,
-          layer: l,
-          size: Math.random() * 6 + 2,
-          color: ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'][Math.floor(Math.random() * 5)]
-        });
-
-        // Connect to previous layer if exists
-        if (l > 0) {
-          links.push({
-            source: nodeId - 1,
-            target: nodeId,
-            radialIndex: i
-          });
-        }
-
-        nodeId++;
-      }
+      links.push({
+        source: 0,       // from center
+        target: nodeId,  // to outer node
+        radialIndex: i
+      });
     }
 
     const gData = { nodes, links };
-    let currentState = 1;
+    let currentState = 3;
     let activeRadial = null;
 
     const Graph = ForceGraph()(document.getElementById('graph'))
@@ -87,20 +70,20 @@
         Graph.graphData(gData); // redraw
       })
       .nodeCanvasObject((node, ctx, globalScale) => {
-        // Draw grid rings once
         if (node.id === 0 && currentState >= 2) {
+          // draw grid circles
           ctx.save();
           ctx.strokeStyle = '#ddd';
           ctx.lineWidth = 1 / globalScale;
-          for (let i = 0; i < maxLayers; i++) {
+          for (let r = 100; r <= radius; r += 80) {
             ctx.beginPath();
-            ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+            ctx.arc(0, 0, r, 0, 2 * Math.PI);
             ctx.stroke();
           }
           ctx.restore();
         }
 
-        if (currentState < 3) return;
+        if (currentState < 3 || node.id === 0) return;
 
         const isHighlighted = node.radialIndex === activeRadial;
         ctx.beginPath();
