converge all the lines in the center

--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -26,34 +26,64 @@
 
   <script>
     const radialCount = 30;
-    const radius = 400;
+    const maxLayers = 5;
+    const ringSpacing = 80;
+    const baseRadius = 100;
 
-    const nodes = [
-      { id: 0, fx: 0, fy: 0 } // center node
-    ];
-    const links = [];
+    const nodes = [], links = [];
+    const radialMaxLayer = [];
 
-    for (let i = 0; i < radialCount; i++) {
-      const angle = (2 * Math.PI * i) / radialCount;
-      const x = radius * Math.cos(angle);
-      const y = radius * Math.sin(angle);
-      const nodeId = i + 1;
+    let nodeId = 0;
 
-      nodes.push({
-        id: nodeId,
-        fx: x,
-        fy: y,
-        radialIndex: i,
-        size: Math.random() * 6 + 2,
-        color: ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'][Math.floor(Math.random() * 5)]
-      });
+    // Add central node at the origin
+const centerNodeId = nodeId++;
+nodes.push({
+  id: centerNodeId,
+  fx: 0,
+  fy: 0,
+  size: 4,
+  color: '#000000',
+});
 
+    // Adjusting to make lines converge at the center
+for (let i = 0; i < radialCount; i++) {
+  const thisMaxLayer = Math.floor(Math.random() * (maxLayers + 3));
+  radialMaxLayer.push(thisMaxLayer);
+
+  for (let l = 0; l < thisMaxLayer; l++) {
+    const angle = (2 * Math.PI * i) / radialCount;
+    const radius = baseRadius + l * ringSpacing;
+
+    const x = radius * Math.cos(angle);
+    const y = radius * Math.sin(angle);
+
+    nodes.push({
+      id: nodeId,
+      fx: x,
+      fy: y,
+      radialIndex: i,
+      layer: l,
+      size: Math.random() * 6 + 2,
+      color: ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'][Math.floor(Math.random() * 5)]
+    });
+
+    if (l === 0) {
       links.push({
-        source: 0,       // from center
-        target: nodeId,  // to outer node
+        source: centerNodeId,
+        target: nodeId,
+        radialIndex: i
+      });
+    } else {
+      links.push({
+        source: nodeId - 1,
+        target: nodeId,
         radialIndex: i
       });
     }
+
+    nodeId++;
+  }
+}
 
     const gData = { nodes, links };
     let currentState = 3;
@@ -70,20 +100,20 @@
         Graph.graphData(gData); // redraw
       })
       .nodeCanvasObject((node, ctx, globalScale) => {
+        // Draw grid rings once
         if (node.id === 0 && currentState >= 2) {
-          // draw grid circles
           ctx.save();
           ctx.strokeStyle = '#ddd';
           ctx.lineWidth = 1 / globalScale;
-          for (let r = 100; r <= radius; r += 80) {
+          for (let i = 0; i < maxLayers; i++) {
             ctx.beginPath();
-            ctx.arc(0, 0, r, 0, 2 * Math.PI);
+            ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
             ctx.stroke();
           }
           ctx.restore();
         }
 
-        if (currentState < 3 || node.id === 0) return;
+        if (currentState < 3) return;
 
         const isHighlighted = node.radialIndex === activeRadial;
         ctx.beginPath();
