hiding central node

--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -113,7 +113,7 @@
         ctx.restore();
       }
 
-      if (currentState < 3) return;
+      return;
 
       const isHighlighted = node.radialIndex === activeRadial;
       ctx.beginPath();
