--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -113,7 +113,7 @@
         ctx.restore();
       }
 
-      if (node.id === 0) return
+      if (node.id === 0 || currentState < 3) return // skip drawing central node 
 
       const isHighlighted = node.radialIndex === activeRadial;
       ctx.beginPath();
