--- a/example/collage/index.html
+++ b/example/collage/index.html
@@ -93,14 +93,14 @@
 
   <div class="collage" id="collage">
     <!-- Sample photos with theme tags -->
-    <img src="https://via.placeholder.com/150?text=1" class="photo" data-theme="emotion" />
-    <img src="https://via.placeholder.com/150?text=2" class="photo" data-theme="design" />
-    <img src="https://via.placeholder.com/150?text=3" class="photo" data-theme="experience" />
-    <img src="https://via.placeholder.com/150?text=4" class="photo" data-theme="emotion" />
-    <img src="https://via.placeholder.com/150?text=5" class="photo" data-theme="change" />
-    <img src="https://via.placeholder.com/150?text=6" class="photo" data-theme="design" />
-    <img src="https://via.placeholder.com/150?text=7" class="photo" data-theme="experience" />
-    <img src="https://via.placeholder.com/150?text=8" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184727-O47THN4VEAP4S1WAEAML/image+%2819%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184700-GB9GXRTH7I8BTTE89RZ4/image+%2814%29.png" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184759-OZUUITPEW1Q1QRSPTZOW/image+%2820%29.png" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184821-SDHVU8UWS4KMTA9S2KXT/image+%2815%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184835-QUKT0YA81YXYKBWTE8XT/image+%2819%29.png" class="photo" data-theme="change" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184912-GJJNRIQTVHASF23EC398/5895eff08e645493e4347d3f57ffa73c.jpg" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184748-UEATOYP8LD858QSO379L/412324614_1051595552727607_1048839557137103528_n.jpg" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184809-WO855J0TBRKVCEHCDBX8/image+%2814%29.png" class="photo" data-theme="emotion" />
     <!-- Add more as needed -->
   </div>
 
