duplicated the sample images

--- a/example/collage/index.html
+++ b/example/collage/index.html
@@ -101,6 +101,38 @@
     <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184912-GJJNRIQTVHASF23EC398/5895eff08e645493e4347d3f57ffa73c.jpg" class="photo" data-theme="design" />
     <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184748-UEATOYP8LD858QSO379L/412324614_1051595552727607_1048839557137103528_n.jpg" class="photo" data-theme="experience" />
     <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184809-WO855J0TBRKVCEHCDBX8/image+%2814%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184727-O47THN4VEAP4S1WAEAML/image+%2819%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184700-GB9GXRTH7I8BTTE89RZ4/image+%2814%29.png" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184759-OZUUITPEW1Q1QRSPTZOW/image+%2820%29.png" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184821-SDHVU8UWS4KMTA9S2KXT/image+%2815%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184835-QUKT0YA81YXYKBWTE8XT/image+%2819%29.png" class="photo" data-theme="change" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184912-GJJNRIQTVHASF23EC398/5895eff08e645493e4347d3f57ffa73c.jpg" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184748-UEATOYP8LD858QSO379L/412324614_1051595552727607_1048839557137103528_n.jpg" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184809-WO855J0TBRKVCEHCDBX8/image+%2814%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184727-O47THN4VEAP4S1WAEAML/image+%2819%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184700-GB9GXRTH7I8BTTE89RZ4/image+%2814%29.png" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184759-OZUUITPEW1Q1QRSPTZOW/image+%2820%29.png" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184821-SDHVU8UWS4KMTA9S2KXT/image+%2815%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184835-QUKT0YA81YXYKBWTE8XT/image+%2819%29.png" class="photo" data-theme="change" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184912-GJJNRIQTVHASF23EC398/5895eff08e645493e4347d3f57ffa73c.jpg" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184748-UEATOYP8LD858QSO379L/412324614_1051595552727607_1048839557137103528_n.jpg" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184809-WO855J0TBRKVCEHCDBX8/image+%2814%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184727-O47THN4VEAP4S1WAEAML/image+%2819%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184700-GB9GXRTH7I8BTTE89RZ4/image+%2814%29.png" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184759-OZUUITPEW1Q1QRSPTZOW/image+%2820%29.png" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184821-SDHVU8UWS4KMTA9S2KXT/image+%2815%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184835-QUKT0YA81YXYKBWTE8XT/image+%2819%29.png" class="photo" data-theme="change" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184912-GJJNRIQTVHASF23EC398/5895eff08e645493e4347d3f57ffa73c.jpg" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184748-UEATOYP8LD858QSO379L/412324614_1051595552727607_1048839557137103528_n.jpg" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184809-WO855J0TBRKVCEHCDBX8/image+%2814%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184727-O47THN4VEAP4S1WAEAML/image+%2819%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184700-GB9GXRTH7I8BTTE89RZ4/image+%2814%29.png" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184759-OZUUITPEW1Q1QRSPTZOW/image+%2820%29.png" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184821-SDHVU8UWS4KMTA9S2KXT/image+%2815%29.png" class="photo" data-theme="emotion" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184835-QUKT0YA81YXYKBWTE8XT/image+%2819%29.png" class="photo" data-theme="change" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184912-GJJNRIQTVHASF23EC398/5895eff08e645493e4347d3f57ffa73c.jpg" class="photo" data-theme="design" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184748-UEATOYP8LD858QSO379L/412324614_1051595552727607_1048839557137103528_n.jpg" class="photo" data-theme="experience" />
+    <img src="https://images.squarespace-cdn.com/content/65c021080c90523fe0d6f11a/1707090184809-WO855J0TBRKVCEHCDBX8/image+%2814%29.png" class="photo" data-theme="emotion" />
     <!-- Add more as needed -->
   </div>
 
