--- a/example/collage/index.html
+++ b/example/collage/index.html
@@ -136,6 +136,39 @@
     <!-- Add more as needed -->
   </div>
 
+  
+  <style>
+    .collage {
+      column-count: 6;
+      column-gap: 8px;
+      padding: 20px;
+    }
+
+    .collage img {
+      width: 100%;
+      display: block;
+      margin-bottom: 8px;
+      break-inside: avoid;
+      transition: opacity 0.3s ease;
+    }
+
+    .faded {
+      opacity: 0.3;
+    }
+
+    @media (max-width: 1000px) {
+      .collage {
+        column-count: 3;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .collage {
+        column-count: 2;
+      }
+    }
+  </style>
+
   <script>
     function filterTheme(theme) {
       const images = document.querySelectorAll('.collage .photo');
