implementing consistent node color on ring and line extending past last node, no circle outside of rings

--- a/example/network/index.html
+++ b/example/network/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head> 
   <style> 
     body { margin: 0; overflow: hidden; }
@@ -30,12 +32,13 @@
     const ringSpacing = 80;
     const baseRadius = 100;
 
+    const ringColors = ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'];
     const nodes = [], links = [];
     const radialMaxLayer = [];
 
     let nodeId = 0;
 
-    // Add central node at the origin
+    // Central node at the origin
     const centerNodeId = nodeId++;
     nodes.push({
       id: centerNodeId,
@@ -45,10 +48,11 @@
       color: '#000000',
     });
 
-    // Adjusting to make lines converge at the center
     for (let i = 0; i < radialCount; i++) {
-      const thisMaxLayer = Math.floor(Math.random() * (maxLayers + 3));
+      const thisMaxLayer = Math.floor(Math.random() * maxLayers) + 1; // Ensure at least 1 ring
       radialMaxLayer.push(thisMaxLayer);
+
+      let lastNodeId = centerNodeId;
 
       for (let l = 0; l < thisMaxLayer; l++) {
         const angle = (2 * Math.PI * i) / radialCount;
@@ -64,25 +68,43 @@
           radialIndex: i,
           layer: l,
           size: Math.random() * 6 + 2,
-          color: ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'][Math.floor(Math.random() * 5)]
+          color: ringColors[l % ringColors.length]
         });
 
-        if (l === 0) {
-          links.push({
-            source: centerNodeId,
-            target: nodeId,
-            radialIndex: i
-          });
-        } else {
-          links.push({
-            source: nodeId - 1,
-            target: nodeId,
-            radialIndex: i
-          });
-        }
+        links.push({
+          source: lastNodeId,
+          target: nodeId,
+          radialIndex: i
+        });
 
+        lastNodeId = nodeId;
         nodeId++;
       }
+
+      // Add a tip node slightly beyond the last circle
+      const angle = (2 * Math.PI * i) / radialCount;
+      const radius = baseRadius + thisMaxLayer * ringSpacing + 20; // Extend tip
+      const x = radius * Math.cos(angle);
+      const y = radius * Math.sin(angle);
+
+      nodes.push({
+        id: nodeId,
+        fx: x,
+        fy: y,
+        radialIndex: i,
+        layer: thisMaxLayer,
+        size: 0,
+        color: 'transparent',
+        invisible: true
+      });
+
+      links.push({
+        source: lastNodeId,
+        target: nodeId,
+        radialIndex: i
+      });
+
+      nodeId++;
     }
 
     const gData = { nodes, links };
@@ -90,39 +112,39 @@
     let activeRadial = null;
 
     const Graph = ForceGraph()(document.getElementById('graph'))
-    .graphData(gData)
-    .enableNodeDrag(false)
-    .onEngineTick(() => Graph.pauseAnimation())
-    .linkWidth(link => currentState === 2 ? 1 : (link.radialIndex === activeRadial ? 2 : 1))
-    .linkColor(link => currentState === 2 ? 'transparent' : (link.radialIndex === activeRadial ? '#aaa' : '#aaa'))
-    .onNodeHover(node => {
-      activeRadial = node ? node.radialIndex : null;
-        Graph.graphData(gData); // redraw
+      .graphData(gData)
+      .enableNodeDrag(false)
+      .onEngineTick(() => Graph.pauseAnimation())
+      .linkWidth(link => currentState === 2 ? 1 : (link.radialIndex === activeRadial ? 2 : 1))
+      .linkColor(link => currentState === 2 ? 'transparent' : (link.radialIndex === activeRadial ? '#aaa' : '#aaa'))
+      .onNodeHover(node => {
+        activeRadial = node ? node.radialIndex : null;
+        Graph.graphData(gData);
       })
-    .nodeCanvasObject((node, ctx, globalScale) => {
-        // Draw grid rings once
-      if (node.id === 0 && currentState >= 2) {
-        ctx.save();
-        ctx.strokeStyle = '#ddd';
-        ctx.lineWidth = 1 / globalScale;
-        for (let i = 0; i < maxLayers; i++) {
-          ctx.beginPath();
-          ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
-          ctx.stroke();
+      .nodeCanvasObject((node, ctx, globalScale) => {
+        if (node.id === 0 && currentState >= 2) {
+          // Draw grid rings
+          ctx.save();
+          ctx.strokeStyle = '#ddd';
+          ctx.lineWidth = 1 / globalScale;
+          for (let i = 0; i < maxLayers; i++) {
+            ctx.beginPath();
+            ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+            ctx.stroke();
+          }
+          ctx.restore();
         }
-        ctx.restore();
-      }
 
-      if (node.id === 0 || currentState < 3) return // skip drawing central node 
+        if (node.invisible || node.id === 0 || currentState < 3) return;
 
-      const isHighlighted = node.radialIndex === activeRadial;
-      ctx.beginPath();
-      ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
-      ctx.fillStyle = node.color;
-      ctx.globalAlpha = isHighlighted || activeRadial === null ? 1 : 0.1;
-      ctx.fill();
-      ctx.globalAlpha = 1;
-    });
+        const isHighlighted = node.radialIndex === activeRadial;
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
+        ctx.fillStyle = node.color;
+        ctx.globalAlpha = isHighlighted || activeRadial === null ? 1 : 0.1;
+        ctx.fill();
+        ctx.globalAlpha = 1;
+      });
 
     function setState(state) {
       currentState = state;
@@ -133,3 +155,4 @@
     setState(1);
   </script>
 </body>
+</html>
