--- a/example/network/index.html
+++ b/example/network/index.html
@@ -1,92 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Interactive Radial Graph</title>
-  <style>
-    body { margin: 0; font-family: sans-serif; background: #f9f9f9; }
-    #controls { position: absolute; top: 10px; left: 10px; z-index: 10; }
-    select { padding: 6px 10px; font-size: 14px; }
-    canvas { display: block; }
+<head> 
+  <style> 
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; position: absolute; top: 0; left: 0; z-index: 0; }
+    #controls {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+      background: rgba(255,255,255,0.9);
+      padding: 10px;
+      border-radius: 8px;
+      font-family: sans-serif;
+    }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/force-graph"></script>
 </head>
+
 <body>
   <div id="controls">
-    <select id="categorySelector" onchange="filterCategory(this.value)">
-      <option value="ALL">All Categories</option>
-      <option value="INVESTMENT">INVESTMENT</option>
-      <option value="FORCES">FORCES</option>
-      <option value="CONSULTANCIES">CONSULTANCIES</option>
-      <option value="CITIES.CULTURE.ART">CITIES.CULTURE.ART</option>
-      <option value="ECOSYSTEMS">ECOSYSTEMS</option>
-      <option value="YESTERYEARS">YESTERYEARS</option>
-    </select>
+    <button onclick="setState(1)">State 1: Lines Only</button>
+    <button onclick="setState(2)">State 2: Grid Only</button>
+    <button onclick="setState(3)">State 3: + Nodes</button>
   </div>
+  <div id="graph"></div>
 
-  <script src="https://unpkg.com/force-graph"></script>
   <script>
-    const Graph = ForceGraph()(document.body);
+    const radialCount = 30;
+    const maxLayers = 5;
+    const ringSpacing = 80;
+    const baseRadius = 100;
 
-    // Sample Data (Replace this with your real data)
-    const nodes = [
-      { id: 1, label: 'URF / TX THE BOX', category: 'INVESTMENT', fx: -300, fy: 200 },
-      { id: 2, label: 'DONGHAI', category: 'INVESTMENT', fx: 0, fy: -300 },
-      { id: 3, label: 'ART BANK', category: 'INVESTMENT', fx: 300, fy: -100 },
-      { id: 4, label: 'ARAMIS', category: 'INVESTMENT', fx: -200, fy: -200 },
-      { id: 5, label: 'SAUVEREIGN', category: 'INVESTMENT', fx: 350, fy: 250 },
-      { id: 6, label: 'DANDELION', category: 'INVESTMENT', fx: 200, fy: 150 }
-      // Add more nodes...
-    ];
+    const ringColors = ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'];
+    const nodes = [], links = [];
+    const radialMaxLayer = [];
 
-    const links = [
-      { source: 1, target: 2 },
-      { source: 2, target: 3 },
-      { source: 3, target: 4 },
-      { source: 4, target: 5 },
-      { source: 5, target: 6 },
-      { source: 6, target: 1 }
-      // Add more links...
-    ];
+    let nodeId = 0;
 
-    // Add visibility flags to data
-    nodes.forEach(n => n.visible = true);
-    links.forEach(l => l.visible = true);
+    // Central node at the origin
+    const centerNodeId = nodeId++;
+    nodes.push({
+      id: centerNodeId,
+      fx: 0,
+      fy: 0,
+      size: 4,
+      color: '#000000',
+    });
 
-    Graph
-      .graphData({ nodes, links })
-      .nodeCanvasObject((node, ctx, globalScale) => {
-        if (!node.visible) return;
-        const label = node.label || '';
-        const fontSize = 12 / globalScale;
-        ctx.font = `${fontSize}px Sans-serif`;
-        ctx.fillStyle = '#333';
-        ctx.beginPath();
-        ctx.arc(node.x, node.y, 6, 0, 2 * Math.PI, false);
-        ctx.fill();
+    for (let i = 0; i < radialCount; i++) {
+      const thisMaxLayer = Math.floor(Math.random() * maxLayers) + 1; // Ensure at least 1 ring
+      radialMaxLayer.push(thisMaxLayer);
 
-        // Optional label
-        ctx.fillText(label, node.x + 8, node.y + 4);
-      })
-      .linkWidth(link => link.visible ? 1 : 0)
-      .linkColor(link => link.visible ? '#aaa' : 'rgba(0,0,0,0)')
-      .nodeRelSize(6)
-      .enableNodeDrag(false)
-      .cooldownTicks(0)
-      .d3AlphaDecay(0.01);
+      let lastNodeId = centerNodeId;
 
-    function filterCategory(category) {
-      nodes.forEach(n => {
-        n.visible = category === 'ALL' || n.category === category;
+      for (let l = 0; l < thisMaxLayer; l++) {
+        const angle = (2 * Math.PI * i) / radialCount;
+        const radius = baseRadius + l * ringSpacing;
+
+        const x = radius * Math.cos(angle);
+        const y = radius * Math.sin(angle);
+
+        nodes.push({
+          id: nodeId,
+          fx: x,
+          fy: y,
+          radialIndex: i,
+          layer: l,
+          size: Math.random() * 6 + 2,
+          color: ringColors[l % ringColors.length]
+        });
+
+        links.push({
+          source: lastNodeId,
+          target: nodeId,
+          radialIndex: i
+        });
+
+        lastNodeId = nodeId;
+        nodeId++;
+      }
+
+      // Add a tip node slightly beyond the last circle
+      const angle = (2 * Math.PI * i) / radialCount;
+      const radius = baseRadius + thisMaxLayer * ringSpacing + 20; // Extend tip
+      const x = radius * Math.cos(angle);
+      const y = radius * Math.sin(angle);
+
+      nodes.push({
+        id: nodeId,
+        fx: x,
+        fy: y,
+        radialIndex: i,
+        layer: thisMaxLayer,
+        size: 0,
+        color: 'transparent',
+        invisible: true
       });
 
-      links.forEach(l => {
-        const source = nodes.find(n => n.id === l.source);
-        const target = nodes.find(n => n.id === l.target);
-        l.visible = category === 'ALL' || (source.visible && target.visible);
+      links.push({
+        source: lastNodeId,
+        target: nodeId,
+        radialIndex: i
       });
 
-      Graph.graphData({ nodes, links });
+      nodeId++;
     }
+
+    const gData = { nodes, links };
+    let currentState = 3;
+    let activeRadial = null;
+
+    const Graph = ForceGraph()(document.getElementById('graph'))
+      .graphData(gData)
+      .enableNodeDrag(false)
+      .onEngineTick(() => Graph.pauseAnimation())
+      .linkWidth(link => currentState === 2 ? 1 : (link.radialIndex === activeRadial ? 2 : 1))
+      .linkColor(link => currentState === 2 ? 'transparent' : (link.radialIndex === activeRadial ? '#aaa' : '#aaa'))
+      .onNodeHover(node => {
+        activeRadial = node ? node.radialIndex : null;
+        Graph.graphData(gData);
+      })
+      .nodeCanvasObject((node, ctx, globalScale) => {
+        if (node.id === 0 && currentState >= 2) {
+          // Draw grid rings
+          ctx.save();
+          ctx.strokeStyle = '#ddd';
+          ctx.lineWidth = 1 / globalScale;
+          for (let i = 0; i < maxLayers; i++) {
+            ctx.beginPath();
+            ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+            ctx.stroke();
+          }
+          ctx.restore();
+        }
+
+        if (node.invisible || node.id === 0 || currentState < 3) return;
+
+        const isHighlighted = node.radialIndex === activeRadial;
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI);
+        ctx.fillStyle = node.color;
+        ctx.globalAlpha = isHighlighted || activeRadial === null ? 1 : 0.1;
+        ctx.fill();
+        ctx.globalAlpha = 1;
+      });
+
+    function setState(state) {
+      currentState = state;
+      activeRadial = null;
+      Graph.graphData(gData);
+    }
+
+    setState(1);
   </script>
 </body>
 </html>
